...
        android:focusable="true"
        android:minHeight="160dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/main_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="186.67dp"
            tools:layout_height="150dp" />

        <org.mozilla.rocket.home.topsites.ui.PagerIndicator
...
