...
    <string name="message_cleared_cached">%1$s cache cleared</string>
    <string name="message_cleared_browsing_data">Browsing data cleared</string>
    <string name="message_deleted_screenshot">Screenshot deleted</string>
    <string name="message_cannot_find_screenshot">Cannot display the screenshot</string>

    <!-- Remove Top site item -->
    <string name="remove">Remove</string>
    <!-- Pin Top site item -->
    <string name="pin_site">Pin site</string>
     
    <!-- In-app message to update to latest build. -->
    <!-- Show a toast message when start downloading the new apk from google play. -->
    <string name="update_to_latest_app_toast">Downloading latest build…</string>
...
